Update main color to blue

--- a/style.css
+++ b/style.css
@@ -189,11 +189,11 @@ a img {
 /** -----------------------------------------------------:[ 2.0 - Typography ]:---------- */
 ::-moz-selection {
   color: #FFF;
-  background: #f2777a;
+  background: #47aede;
 }
 ::selection {
   color: #FFF;
-  background: #f2777a;
+  background: #47aede;
 }
 html {
   font-size: 18px;
@@ -465,7 +465,7 @@ textarea {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -484,8 +484,8 @@ textarea {
 .btn:hover,
 .btn:focus,
 .btn:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 .btn-full {
@@ -536,7 +536,7 @@ input[type="submit"] {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -564,8 +564,8 @@ button:active,
 input[type="button"]:active,
 input[type="reset"]:active,
 input[type="submit"]:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 button-full,
@@ -853,7 +853,7 @@ textarea:focus {
   content: "\f071";
 }
 .error {
-  background: #f2777a;
+  background: #47aede;
 }
 .error a:hover {
   background-color: #ee484c;
@@ -879,7 +879,7 @@ textarea:focus {
 /** -----------------------------------------------------:[ 5.0 - Navigation ]:---------- */
 /** ----------------------------------------:[ 5.1 - Links ]:--- */
 a {
-  color: #f2777a;
+  color: #47aede;
   text-decoration: none;
   -webkit-transition: color 200ms ease;
   -moz-transition: color 200ms ease;
@@ -949,7 +949,7 @@ a:active {
 }
 /** ---:[ Styles ]:--- */
 .main-navigation {
-  background: #f2777a;
+  background: #47aede;
   display: none;
 }
 .main-navigation ul {
@@ -1066,7 +1066,7 @@ a:active {
 }
 .js .main-navigation li a:hover,
 .js .main-navigation li a:active {
-  color: #f2777a;
+  color: #47aede;
 }
 .js .main-navigation li:hover ul,
 .js .main-navigation li:hover ul ul,
@@ -1329,7 +1329,7 @@ a:active {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -1363,8 +1363,8 @@ a:active {
 .paging-navigation .nav-next a:active,
 .post-navigation .nav-next a:active,
 .comment-navigation .nav-next a:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 .paging-navigation .nav-previous a-full,
@@ -1581,7 +1581,7 @@ a:active {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -1600,8 +1600,8 @@ a:active {
 .js #infinite-handle span:hover,
 .js #infinite-handle span:focus,
 .js #infinite-handle span:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 .js #infinite-handle span-full {
@@ -1890,7 +1890,7 @@ a:active {
   color: #FFF;
 }
 .js .widget.widget_tag_cloud a:hover {
-  background-color: #f2777a;
+  background-color: #47aede;
 }
 .js .widget .menu li {
   padding: 0;
@@ -2024,7 +2024,7 @@ a:active {
   outline: 0;
 }
 .entry-title a:hover {
-  color: #f2777a;
+  color: #47aede;
 }
 .entry-meta i {
   margin-right: .4em;
@@ -2054,7 +2054,7 @@ a:active {
   transition: background 200ms linear, color 200ms linear;
 }
 .entry-meta-tags a:hover {
-  background: #f2777a;
+  background: #47aede;
   color: #FFF;
 }
 .entry-image {
@@ -2106,7 +2106,7 @@ a:active {
 .js .blog .sticky .entry-title a:hover,
 .js .archive .sticky .entry-title a:hover,
 .js .search .sticky .entry-title a:hover {
-  color: #f2777a;
+  color: #47aede;
 }
 .js .blog .sticky .entry-summary a,
 .js .archive .sticky .entry-summary a,
@@ -2157,7 +2157,7 @@ a:active {
   border-bottom: 1px solid #f6f6f6;
 }
 .no-js .sticky {
-  border-left: 5px solid #f2777a;
+  border-left: 5px solid #47aede;
 }
 /** ----------------------------------------:[ 10.2 - Post Formats ]:--- */
 /** ---:[ With JavaScript ]:--- */
@@ -2459,8 +2459,8 @@ a:active {
   padding: 0;
 }
 #comments .comment #respond .cancel-comment a:hover {
-  border-color: #f2777a;
-  color: #f2777a;
+  border-color: #47aede;
+  color: #47aede;
 }
 #comments .pingback {
   margin: 1em 0;
@@ -2483,7 +2483,7 @@ a:active {
 }
 #comments .bypostauthor {
   padding-right: 1em;
-  border-right: 3px solid #f2777a;
+  border-right: 3px solid #47aede;
 }
 #respond {
   position: relative;
@@ -2505,7 +2505,7 @@ a:active {
   position: absolute;
   top: 12px;
   right: 12px;
-  color: #f2777a;
+  color: #47aede;
   font-size: 1.5em;
 }
 #respond #reply-title {
@@ -2521,7 +2521,7 @@ a:active {
   color: #ececec;
 }
 #respond #reply-title a:hover {
-  color: #f2777a;
+  color: #47aede;
 }
 #respond #comment {
   height: 75px;
@@ -2601,7 +2601,7 @@ a:active {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -2620,8 +2620,8 @@ a:active {
 #respond .form-submit input:hover,
 #respond .form-submit input:focus,
 #respond .form-submit input:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 #respond .form-submit input-full {
@@ -3166,7 +3166,7 @@ input#carousel-reblog-submit {
   cursor: pointer;
   display: inline-block;
   padding: 1em;
-  background: #f2777a;
+  background: #47aede;
   border: 0;
   border-radius: 2px;
   box-shadow: none;
@@ -3188,8 +3188,8 @@ input#carousel-reblog-submit:hover,
 input#carousel-reblog-submit:focus,
 #jp-carousel-comment-form-button-submit:active,
 input#carousel-reblog-submit:active {
-  background: #f2777a;
-  box-shadow: 0 0 0 3px #f2777a;
+  background: #47aede;
+  box-shadow: 0 0 0 3px #47aede;
   color: #FFF;
 }
 #jp-carousel-comment-form-button-submit-full,
